--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tensorflow-models/mobilenet": "^2.1.0",
+    "@tensorflow/tfjs": "^3.15.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "lodash": "^4.17.21",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.181",
     "@types/node": "17.0.23",
     "@types/react": "18.0.4",
     "@types/react-dom": "18.0.0",
