--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "dog-breed-clasifier",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=14.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,7 +14,6 @@
   "dependencies": {
     "@tensorflow-models/mobilenet": "^2.1.0",
     "@tensorflow/tfjs": "^3.15.0",
-    "@testing-library/jest-dom": "^5.16.4",
     "lodash": "^4.17.21",
     "next": "12.1.5",
     "react": "18.0.0",
