--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.8.8",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@tensorflow-models/mobilenet": "^2.1.0",
     "@tensorflow/tfjs": "^3.15.0",
+    "framer-motion": "^6.3.2",
     "lodash": "^4.17.21",
     "next": "12.1.5",
     "react": "18.0.0",
